syntax = "proto3";

package message.v1;

option go_package = "github.com/dev-shimada/grpc-federation-playground/bff/gen/message/v1;messagev1";

service MessageService {
  rpc Post(PostRequest) returns (PostResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc PingPong(PingPongRequest) returns (PingPongResponse);
}

message PostRequest {
  string user_id = 1;
  string text = 2;
}

message PostResponse {
  string id = 1;
}

message GetRequest {
  string id = 1;
}

message GetResponse {
  string user_id = 1;
  string text = 2;
}

message PingPongRequest {
  string user_id = 1;
  string text = 2;
}

message PingPongResponse {
  string user_id = 1;
  string text = 2;
}
